force-app/main/default/objects/PursuitPropertyList__c/PursuitPropertyList__c.object-meta.xml
<CustomObject>
    <label>追求物件一覧表</label>
    <nameField>
        <label>追求物件一覧表名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>