force-app/main/default/objects/PursuitPropertyList__c/fields/EN__c.field-meta.xml
<CustomField>
    <fullName>EN__c</fullName>
    <label>利益率_EN</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>