force-app/main/default/objects/PursuitPropertyList__c/fields/En_kanseikiText__c.field-meta.xml
<CustomField>
    <fullName>En_kanseikiText__c</fullName>
    <label>完成期（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>