force-app/main/default/objects/PursuitPropertyList__c/fields/en_kousyuhinsyutouzyouhou__c.field-meta.xml
<CustomField>
    <fullName>en_kousyuhinsyutouzyouhou__c</fullName>
    <label>工種品種等情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>