force-app/main/default/objects/PursuitPropertyList__c/fields/en_mitsumorikingaku__c.field-meta.xml
<CustomField>
    <fullName>en_mitsumorikingaku__c</fullName>
    <label>見積金額EN</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>