force-app/main/default/objects/PursuitPropertyList__c/fields/en_sekkeizimusyo__c.field-meta.xml
<CustomField>
    <fullName>en_sekkeizimusyo__c</fullName>
    <label>設計事務所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>