force-app/main/default/objects/PursuitPropertyList__c/fields/en_zyutyuumokuhyougaku__c.field-meta.xml
<CustomField>
    <fullName>en_zyutyuumokuhyougaku__c</fullName>
    <label>受注目標額</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>