force-app/main/default/objects/PursuitPropertyList__c/fields/Ju_tokuisakisansyo__c.field-meta.xml
<CustomField>
    <fullName>Ju_tokuisakisansyo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>追求物件一覧表</relationshipLabel>
    <relationshipName>PursuitPropertyListAccpunt</relationshipName>
    <type>Lookup</type>
</CustomField>