force-app/main/default/objects/PursuitPropertyList__c/fields/Opp__c.field-meta.xml
<CustomField>
    <fullName>Opp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>商談名</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>追求物件一覧表</relationshipLabel>
    <relationshipName>PursuitPropertyListOpp</relationshipName>
    <type>Lookup</type>
</CustomField>