force-app/main/default/objects/PursuitPropertyList__c/fields/OppOwner__c.field-meta.xml
<CustomField>
    <fullName>OppOwner__c</fullName>
    <label>商談所有者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>